--- a/src/data/projectBodies.css
+++ b/src/data/projectBodies.css
@@ -22,3 +22,39 @@
 		width: 100%;
 	}
 }
+
+.heading-1 {
+    font-size: 30px;
+    font-weight: bold;
+    line-height: 30px;
+    color: #000000;
+}
+
+.image-1 {
+    width: 600px;
+}
+
+.image-2 {
+    width: 400px;
+}
+
+@media (max-width: 1024px) {
+    .image-1,
+    .image-2 {
+        width: 100%;
+    }
+}
+
+.project-logo-header {
+    width: 80%;        /* bigger */
+    max-width: 900px;  /* even bigger on desktop */
+    height: auto;
+    display: block;
+    margin: 20px auto;
+}
+
+.mapping-img {
+    width: 100%;
+    
+    object-fit: contain;  /* keeps full image visible */
+}
