--- a/src/pages/styles/readArticle.css
+++ b/src/pages/styles/readArticle.css
@@ -19,7 +19,7 @@
 	display: flex;
 	height: 100%;
 	margin: 0;
-	padding-top: 120px;
+	padding-top: 0px;
 }
 
 .read-article-back {
